Cleaned HTML a bit, and added some CSS. Corrected class to align self portrait.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -56,14 +56,20 @@ a {
     background-color: aqua;
 }
 
+.image-container {
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
 
-.Self-Portait {
+.Self-Portrait {
     background-image: url("../images/bootcamppicture.jpg");
     background-size: cover;
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    margin: 25px 775px;
 }
 
 .About-Me p {
@@ -75,7 +81,7 @@ a {
     text-align: center;
 }
 
-.Works h2{
+.Works h2 {
     display:flex;
     flex-direction: row;
     align-items: center;
@@ -86,5 +92,12 @@ a {
     background-color: aqua;
 }
 
+/* .Horiseon {
+    background-image: url("../images/HoriseonScreenshot.png");
+    background-size: cover;
+    width: 750px;
+    height: 750px;
 
+    
+} */
 
